# mlb-unicorn-engine

./: .gitignore  Dockerfile  OPERATIONS.md  index.html  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: site-data-product.yml  smoke.yml  static-only-ci.yml  top50_quality_audit.yml  warm-render.yml
artifacts/: top50_quality_report_2025-03-27_2025-03-27.json  top50_quality_report_2025-03-27_2025-04-05.json
backend/: .env.example  Dockerfile  Makefile  __init__.py  alembic.ini
backend/alembic/: env.py
backend/app/: main.py
backend/db/: __init__.py  base.py  models.py
backend/tests/: test_barrel_metrics.py  test_hot_not_qualifications.py  test_league_averages.py  test_models.py  test_ohtani_two_way.py  test_pitcher_roles.py  test_roles.py  test_site_data_product.py  test_team_all_teams.py  test_team_endpoint.py  test_top50_quality_audit.py  test_unicorn_scoring_selection.py  test_wrc_plus.py
data/: unicorns.json
data/outputs/: wrc_plus_constants_2025_2025-03-27_2025-04-15.json  wrc_plus_constants_2025_2025-03-27_2025-04-20.json  wrc_plus_leaderboard_2025_2025-03-27_2025-04-15.csv  wrc_plus_leaderboard_2025_2025-03-27_2025-04-20.csv
docs/: mlb_unicorn_engine_spec.md  static-site-parallel-deploy.md  static-site-smoke-checklist.md
infra/: docker-compose.yml
scripts/: calibrate_wrc_plus.py  daily_site_update.sh
static-site/: build.mjs  package.json  vercel.json
unicorn-website/: README.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  vercel.json
(+4228 files in other folders)
